<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgrouund"
    tools:context="com.example.nativeMall.ui.Activity.SettingMessageActivity">

    <RelativeLayout
        android:id="@+id/rl_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_background">

        <ImageView
            android:id="@+id/iv_setting_back"
            style="@style/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv2_white_24_margin8"
            android:text="@string/tv_my_setting_message"/>
    </RelativeLayout>

    <Switch
        android:background="@color/white"
        style="@style/tv_center_33"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_size_8dp"
        android:paddingRight="@dimen/margin_size_8dp"
        android:layout_height="44dp"
        android:text="@string/tv_my_setting_system_message"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <Switch
        android:background="@color/white"
        style="@style/tv_center_33"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_size_8dp"
        android:paddingRight="@dimen/margin_size_8dp"
        android:layout_height="44dp"
        android:text="@string/tv_my_setting_order_message"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <Switch
        android:background="@color/white"
        style="@style/tv_center_33"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_size_8dp"
        android:paddingRight="@dimen/margin_size_8dp"
        android:layout_height="44dp"
        android:text="@string/tv_my_setting_zixun_message"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <Switch
        android:background="@color/white"
        style="@style/tv_center_33"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_size_8dp"
        android:paddingRight="@dimen/margin_size_8dp"
        android:layout_height="44dp"
        android:text="@string/tv_my_setting_article_message"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>
</LinearLayout>
