<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nativeMall.ui.Activity.ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/rl_mine_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_background">

        <ImageView
            android:id="@+id/iv_setting_back"
            style="@style/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left_white_24dp"/>

        <TextView
            style="@style/tv2_white_24_margin8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_my_setting_password"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tv_setting_change_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_mobile"
            style="@style/tv_center_33"
            android:layout_marginLeft="@dimen/margin_size_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_my_setting_mobile"/>

        <TextView
            android:id="@+id/change_pass_tele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_size_12dp"
            android:layout_marginLeft="@dimen/margin_size_30dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/tv_mobile"
            android:textColor="@color/font_colour_33"
            android:textSize="@dimen/font_size_16sp"/>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:id="@+id/tv_setting_change_yanzhengma"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_change_password_yanzhengma"
            style="@style/tv_center_33"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_8dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_my_setting_yanzhengma"/>

        <EditText
            android:id="@+id/change_pass_yanzhengma"
            style="@style/et_padding_8_right"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="@dimen/margin_size_20dp"
            android:layout_toRightOf="@id/tv_change_password_yanzhengma"
            android:background="@null"
            android:hint="@string/yanzhengma"
            android:textColor="@color/font_colour_33"
            android:textColorHint="@color/font_colour_99"/>

        <TextView
            android:id="@+id/change_pass_send"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:padding="@dimen/margin_size_4dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_size_8dp"
            android:background="@drawable/textview_boder_blue"
            android:text="@string/send_yanzhengma"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:id="@+id/tv_setting_change_old_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_change_password_old_pass"
            style="@style/tv_center_33"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_8dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_my_setting_old_password"/>

        <EditText
            android:id="@+id/et_change_address_old_pass"
            style="@style/et_padding_8_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/margin_size_20dp"
            android:layout_toRightOf="@id/tv_change_password_old_pass"
            android:background="@null"
            android:hint="@string/tv_my_setting_old_password_detail"
            android:textColor="@color/font_colour_33"
            android:textColorHint="@color/font_colour_99"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:id="@+id/tv_setting_change_passwor_new"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_change_password_new_pass"
            style="@style/tv_center_33"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_8dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_my_setting_new_password"/>

        <EditText
            android:id="@+id/et_change_address_new_pass"
            style="@style/et_padding_8_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_20dp"
            android:layout_toRightOf="@id/tv_change_password_new_pass"
            android:inputType="textPassword"
            android:background="@null"
            android:hint="@string/tv_my_setting_new_password_detail"
            android:textColor="@color/font_colour_33"
            android:textColorHint="@color/font_colour_99"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:id="@+id/tv_setting_change_passwor_new_again"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_change_password_new_pass_again"
            style="@style/tv_center_33"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_8dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_my_setting_new_password_again"/>

        <EditText
            android:id="@+id/et_change_address_new_pass_repeat"
            style="@style/et_padding_8_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_6dp"
            android:inputType="textPassword"
            android:layout_toRightOf="@id/tv_change_password_new_pass_again"
            android:background="@null"
            android:hint="@string/tv_my_setting_new_password_again_detail"
            android:textColor="@color/font_colour_33"
            android:textColorHint="@color/font_colour_99"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_size_8dp"
        android:background="@color/line_colour_ee"/>

    <TextView
        android:id="@+id/change_pass_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/tv_my_setting_commit"
        android:textColor="@color/blue"
        android:padding="@dimen/margin_size_12dp"
        android:textSize="@dimen/font_size_16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

</LinearLayout>
