<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backgrouund"
              android:orientation="vertical"
              tools:context="com.example.nativeMall.ui.Activity.AddAddressActivity">

    <com.example.nativeMall.ui.widget.MallTitle
        android:id="@+id/title_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcLeftIv="@drawable/ic_keyboard_arrow_left_white_24dp"
        app:textTitle="@string/tv_add_address"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            style="@style/tv_14_left_marginleft8_33"
            android:layout_height="wrap_content"
            android:text="@string/tv_consignee"/>

        <EditText
            android:id="@+id/et_add_address_name"
            style="@style/et_14_right_marginright8_99"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/tv_consignee_detail"/>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/et_add_address_telephone"
            style="@style/et_14_right_marginright8_99"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/tv_telephone_detail"
            android:inputType="phone"
            android:maxLength="11"/>

        <TextView
            android:id="@+id/textView4"
            style="@style/tv_14_left_marginleft8_33"
            android:layout_height="wrap_content"
            android:text="@string/tv_telephone"/>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:id="@+id/rl_add_address_sanjiliandogn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            style="@style/tv_14_left_marginleft8_33"
            android:layout_height="wrap_content"
            android:text="@string/tv_area"/>

        <TextView
            android:id="@+id/tv_add_address_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_size_8dp"
            android:text="@string/tv_area_choose"
            android:textColor="@color/font_colour_99"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            style="@style/tv_14_left_marginleft8_33"
            android:layout_height="wrap_content"
            android:text="@string/tv_address"/>

        <EditText
            android:id="@+id/et_add_address_address"
            style="@style/et_14_right_marginright8_99"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/tv_address_detail"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_colour_ee"/>

    <Button
        android:id="@+id/bt_add_address_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/margin_size_10dp"
        android:layout_marginRight="@dimen/margin_size_10dp"
        android:layout_marginTop="@dimen/margin_size_20dp"
        android:background="@drawable/bt_blue_boder"
        android:text="@string/tv_save"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:id="@+id/wheel_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/margin_size_16dp"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <RelativeLayout
            android:id="@+id/tv_choice_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:text="请选择城市"
                android:textColor="@color/font_colour_99"
                android:textSize="16sp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_size_8dp"
                android:layout_marginTop="@dimen/margin_size_10dp"
                android:background="@drawable/bt_blue_boder"
                android:onClick="showChoose"
                android:text="确定"
                android:textColor="@color/white"
                />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_choice_city"
            android:background="@color/white"
            android:orientation="horizontal">

            <kankan.wheel.widget.WheelView
                android:id="@+id/id_province"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </kankan.wheel.widget.WheelView>

            <kankan.wheel.widget.WheelView
                android:id="@+id/id_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </kankan.wheel.widget.WheelView>

            <kankan.wheel.widget.WheelView
                android:id="@+id/id_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </kankan.wheel.widget.WheelView>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
